--- a/src/Styles/goodsCard.scss
+++ b/src/Styles/goodsCard.scss
@@ -100,7 +100,7 @@
   height: 260px;
   // padding: 25px 10px 12px;
   position: relative;
-  border: $border-size-normal solid #dadada;
+  // border: $border-size-normal solid #dadada;
   background-color: #fff;
   transition: border-color 0.2s linear;
 
@@ -117,8 +117,10 @@
   &__cover {
     text-align: center;
     left: 0;
-    width: 100%;
-    height: 160px;
+    // width: 100%;
+    height: 130px;
+    width: 90px;
+    border: 1px solid #888;
 
     img {
       width: 100%;
@@ -144,11 +146,26 @@
 
     &__title {
       height: 32px;
-      line-height: 16px;
+      line-height: 12px;
       text-align: center;
       color: #333;
       font-size: 12px;
       font-weight: bold;
+    }
+
+    &__summary {
+      margin-top: 5px;
+      font-size: 11px;
+    }
+
+    &__price {
+      margin-top: 10px;
+      font-size: 11px;
+      letter-spacing: -1px;
+
+      strong {
+        color: #fd3744;
+      }
     }
   }
 }
