--- a/src/Styles/box.scss
+++ b/src/Styles/box.scss
@@ -1,10 +1,7 @@
 @import "./colors.scss";
 
 $title-height: 30px;
-$box-font-family: "Malgun Gothic",
-"Apple SD Neo Gothic",
-"Dotum",
-"Sans-Serif";
+$box-font-family: "Malgun Gothic", "Apple SD Neo Gothic", "Dotum", "Sans-Serif";
 
 @mixin box-title() {
   font-size: 16px;
@@ -85,7 +82,6 @@ $box-font-family: "Malgun Gothic",
 
     // 섹션
     .section {
-
       // 각 섹션 타이틀
       &__title {
         a {
@@ -182,16 +178,18 @@ $box-font-family: "Malgun Gothic",
       }
     }
 
-
     // end .category-list
   }
 
   &__more {
     position: absolute;
     font-size: 11px;
-    color: gray;
+
     top: 5px;
     right: 0;
+    a {
+      color: gray;
+    }
   }
 
   &.left-title {
@@ -210,7 +208,7 @@ $box-font-family: "Malgun Gothic",
     .layer {
       padding: 15px;
 
-      >div {
+      > div {
         display: inline;
         vertical-align: middle;
       }
@@ -245,7 +243,7 @@ $box-font-family: "Malgun Gothic",
   display: flex;
   align-items: center;
 
-  >div {
+  > div {
     float: left;
     width: 50%;
   }
