update other Pages

--- a/src/Styles/bookPage.scss
+++ b/src/Styles/bookPage.scss
@@ -62,7 +62,7 @@ dl {
       padding-top: 0;
     }
 
-    >div {
+    > div {
       margin: 10px 0;
     }
   }
@@ -86,7 +86,8 @@ dl {
   }
 
   .rank-container {
-    .item {}
+    .item {
+    }
 
     em {
       color: #f84450;
@@ -100,7 +101,8 @@ dl {
   }
 
   .book-cover {
-    &__image-container {}
+    &__image-container {
+    }
 
     &__btn-container {
       &__list {
@@ -136,7 +138,7 @@ dl {
       height: 27px;
     }
 
-    h2+button {
+    h2 + button {
       position: absolute;
       right: 10px;
     }
@@ -180,12 +182,12 @@ ul.stick-list {
     position: relative;
     display: inline-block;
 
-    >* {
+    > * {
       display: inline-block;
-      padding: 0 10px;
+      padding: 0 8px;
     }
 
-    >button {
+    > button {
       margin-left: 10px;
     }
 
@@ -202,7 +204,7 @@ ul.stick-list {
     }
 
     &:first-child {
-      >* {
+      > * {
         padding-left: 0;
       }
 
