--- a/src/Styles/box.scss
+++ b/src/Styles/box.scss
@@ -246,7 +246,7 @@ $box-font-family: "Malgun Gothic", "Apple SD Neo Gothic", "Dotum", "Sans-Serif";
   .footer {
     position: absolute;
     width: 100%;
-    background: url("/assets/images/bg/bg_blue01.png");
+    background: url("../images/icons/images/bg/bg_blue01.png");
     bottom: 0;
     color: white;
 
