cards align center

--- a/src/Styles/box.scss
+++ b/src/Styles/box.scss
@@ -167,7 +167,7 @@ $box-font-family: "Malgun Gothic", "Apple SD Neo Gothic", "Dotum", "Sans-Serif";
         justify-content: space-between;
 
         li {
-          margin-left: 11px;
+          // margin-left: 11px;
           // float: left;
 
           &:last-child {
