--- a/src/Styles/goodsCard.scss
+++ b/src/Styles/goodsCard.scss
@@ -117,7 +117,7 @@
   &__cover {
     text-align: center;
     left: 0;
-    // width: 100%;
+    margin: 0 auto;
     height: 130px;
     width: 90px;
     border: 1px solid #888;
@@ -163,6 +163,7 @@
       margin-top: 10px;
       font-size: 11px;
       letter-spacing: -1px;
+      text-align: center;
 
       strong {
         color: #fd3744;
