--- a/src/Styles/box.scss
+++ b/src/Styles/box.scss
@@ -124,6 +124,72 @@ $box-font-family: "Malgun Gothic", "Apple SD Neo Gothic", "Dotum", "Sans-Serif";
         }
       }
 
+      &.circles {
+        ul {
+          display: flex;
+          flex-wrap: wrap;
+          width: 100%;
+
+          li {
+            // border: 1px solid $color-border-main;
+            padding: 10px;
+            margin: 0;
+            width: 25%;
+
+            a {
+              display: block;
+            }
+
+            h3.title {
+              font-size: 12px;
+              font-weight: bold;
+              text-align: center;
+              margin-top: 6px;
+            }
+            .summary-text {
+              font-size: 12px;
+              text-align: center;
+              margin-top: 4px;
+            }
+
+            .image-wapper {
+              margin: 0 auto;
+              height: 180px;
+              width: 180px;
+              position: relative;
+              clip-path: circle(50%);
+
+              img {
+                height: 100%;
+                width: 100%;
+                // border-radius: 50%;
+
+                &:hover {
+                }
+              }
+
+              .category-wapper {
+                position: absolute;
+                background-color: rgba(0, 0, 0, 0.5);
+                height: 60px;
+                width: 100%;
+                left: 0;
+                bottom: 0;
+                .text {
+                  position: absolute;
+                  margin-top: 10px;
+                  font-size: 14px;
+                  font-weight: bold;
+                  width: 100%;
+                  color: white;
+                  text-align: center;
+                }
+              }
+            }
+          }
+        }
+      }
+
       li {
         margin-right: 23px;
         float: left;
